# Gendiff

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
gendiff/: __init__.py  diff.py  flat.py  gendiff.py  json.py  parser.py  plain.py  stylish.py  vision.py
gendiff/formatters/: choose_formatter.py  gendiff.py  json.py  plain.py  replacements.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_flat.py  test_gendiff.py  test_main.py  test_parser.py  test_plain.py  test_stylish.py  test_vision.py
tests/fixtures/: json_format.txt  test_diff_result.txt
